<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    android:background="#AFBEC0"
    tools:context=".ConfigurationFragment"
    tools:layout_editor_absoluteY="15dp">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/new_question_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_question_editText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/option_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:hint="@string/option_one"
        app:layout_constraintEnd_toStartOf="@+id/option_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_question_editText" />

    <EditText
        android:id="@+id/option_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:hint="@string/option_two"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@+id/new_question_editText" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_question_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>