<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsFragment"
    tools:layout_editor_absoluteX="15dp"
    tools:layout_editor_absoluteY="15dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/no_vote_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="5dp"
        android:text="@string/no_vote_textView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yes_vote_textView"
        app:layout_constraintTop_toBottomOf="@+id/results_header_textView" />

    <TextView
        android:id="@+id/yes_vote_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="5dp"
        android:text="@string/yes_vote_textView"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/no_vote_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_header_textView" />

    <TextView
        android:id="@+id/results_header_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_header_textView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes_vote_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>